--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -21,11 +21,11 @@
 【真实性】真实性即某主体的身份与其声称的身份相一致的特性。真实性通常通过身份鉴别的手段，即验证用户提交的某种与其声明的身份相绑定的信息的完整性来获得。但真实性与信源完整性有显著的区别：其一，真实性需要鲜活性，即重放的信息是无效的，这点区别于信源完整性；其二，某些具有信源完整性的消息是主体匿名的，这点又不符合真实性的要求。  
 【认证/身份鉴别】通过用户提交的附加信息，对主体身份进行证实的过程。  
 【非否认服务】防止参与某次通信交换的一方事后否认本次交换曾经发生过的服务称为非否认服务。  
-【accountability（可追溯性）】  
+【accountability（可追责性）】The traceability of actions performed on a system to a specific system entity (user, process, device). For example, the use of unique user identification and authentication supports accountability; the use of shared user IDs and passwords destroys accountability.（From Wiki）非否认性、完整性、日志记录是确保可追责性的基础。可追责性可支持安全审计。  
 【审计】ISO/IEC 15408给出的定义：信息系统安全审计主要指对与安全有关的活动的相关信息进行识别、记录、存储和分析；审计记录的结果用于检查网络上发生了哪些与安全有关的活动，谁（哪个用户）对这个活动负责；主要功能包括：安全审计自动响应、安全审计数据生成、安全审计分析、安全审计浏览、安全审计事件选择、安全审计事件存储等。  
 【攻击面（attack surface）】The attack surface of a software environment is the sum of the different points (the "attack vectors") where an unauthorized user (the "attacker") can try to enter data to or extract data from an environment.Keeping the attack surface as small as possible is a basic security measure.（来自wiki）  
 【攻击树】用树型结构来描述系统所面临的安全威胁和系统可能受到的多种攻击，其中根节点代表被攻击的目标，叶节点表示达成攻击目标的方法。  
-【Bayes定理】  
+【Bayes定理】（书上有）  
 【完善保密性】对于任意密文 y 和明文 x，都有 Pr[x | y] = Pr[x]。即，不能通过分析密文获得明文的任何信息。  
 【信息熵】香农提出的用来量化信息的一种度量方式，用信源的不确定度来描述信源的信息含量。  
 【无条件安全性】假定攻击者拥有无限的计算资源，但仍然无法破译该密码系统，则称该密码系统是无条件安全的。  
@@ -70,11 +70,21 @@
 
 #### 简答  
 1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
-2.对信息系统进行安全分级主要依据什么？答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。  
-3.信息系统的安全管理体系由哪些部分组成？答：主要包括信息安全行政管理和信息安全技术管理两部分，前者包括信息安全策略及管理制度、信息安全机构及人员，后者包括信息系统安全建设和信息系统安全运维。  
-4.简述GDPR.答：GDPR=General Data Protection Regulation，即欧盟法规《通用数据保护条例》。法规是对关于个人数据保护和隐私保护的规范，适用于在欧洲开展业务的所有企业，要求这些企业处理个人数据的业务流程必须符合其对个人隐私和个人数据安全性保护的规定。法案于2018年5月开始强制实施，违反此规定的企业将面临公司全球收益4%或两千万欧元（取高者）的罚款。此法案对个人数据及个人隐私的保护起到了积极作用。  
-5.简述STRIDE威胁建模。答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure  
-6.简述PDCA.答：通过规划（Plan）、执行（Do）、查核（Check）、行动（Act）四阶段，确保每次的目标都能达成。PDCA循环就是按照这样的顺序进行质量管理，并且循环不止地进行下去的科学程序。  
+2.对信息系统进行安全分级主要依据什么？  
+>答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。  
+
+3.信息系统的安全管理体系由哪些部分组成？  
+>答：主要包括信息安全行政管理和信息安全技术管理两部分，前者包括信息安全策略及管理制度、信息安全机构及人员，后者包括信息系统安全建设和信息系统安全运维。  
+
+4.简述GDPR.  
+>答：GDPR=General Data Protection Regulation，即欧盟法规《通用数据保护条例》。法规是对关于个人数据保护和隐私保护的规范，适用于在欧洲开展业务的所有企业，要求这些企业处理个人数据的业务流程必须符合其对个人隐私和个人数据安全性保护的规定。法案于2018年5月开始强制实施，违反此规定的企业将面临公司全球收益4%或两千万欧元（取高者）的罚款。此法案对个人数据及个人隐私的保护起到了积极作用。  
+
+5.简述STRIDE威胁建模。  
+>答：  Spoofing、Tampering、Repudiation、Elevation of Privilege、DoS、Info Disclosure  
+
+6.简述PDCA.  
+>答：通过规划（Plan）、执行（Do）、查核（Check）、行动（Act）四阶段，确保每次的目标都能达成。PDCA循环就是按照这样的顺序进行质量管理，并且循环不止地进行下去的科学程序。  
+
 7.Dolev-Yao威胁模型中，认为敌手能够做什么，不能够做什么？答：  
 >敌手可以：  
 1）能获得经过网络的任何消息；  
@@ -88,21 +98,26 @@
 4）不能控制计算环境中的私有区域。  
         
 8.chmod u+s filename之后，filename文件的权限属性发生了什么变化？    
-答：为filename文件加上setuid标志，使(一般只拥有调用该文件的用户具有的权限的)filename文件在执行阶段具有文件所有者的权限。           
+>答：为filename文件加上setuid标志，使(一般只拥有调用该文件的用户具有的权限的)filename文件在执行阶段具有文件所有者的权限。           
+
 9.简述ruid和euid的区别。  
-答：ruid(real user ID)表示实际用户ID，永久不会变：当一个用户登录系统之后，该shell的ruid就是该用户了，     
+>答：ruid(real user ID)表示实际用户ID，永久不会变：当一个用户登录系统之后，该shell的ruid就是该用户了，     
 从该根shell产生的所有进程都会继承ruid，即该用户；        
 euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对系统资源的访问权限，通常情况下等于ruid；      
-若某可执行文件设置了suid位，当其被非owner用户执行时，该进程的euid是文件的owner(创建了该文件且设置了suid位)，ruid是执行者(登录执行者)。         
+若某可执行文件设置了suid位，当其被非owner用户执行时，该进程的euid是文件的owner(创建了该文件且设置了suid位)，ruid是执行者(登录执行者)。   
+
 10.setuid位有什么用处？      
-答：对于一个可执行文件，在执行时，一般该文件只拥有调用该文件的用户具有的权限，而设置setuid位可使文件在执行阶段具有文件所有者的权限。           
+>答：对于一个可执行文件，在执行时，一般该文件只拥有调用该文件的用户具有的权限，而设置setuid位可使文件在执行阶段具有文件所有者的权限。      
+
 11.简述访问监测器（Reference Monitor）的NEAT原则。答：
- (以下为要点，需展开)  
+ >(以下为要点，需展开)  
  Non-bypassable  
  Evaluable  
  always invoked  
  Tamper-proof  
+ 
 12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。答：  
+
 13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
 >答：如Pr[x0]=0,则∀y，Pr[x0|y]=Pr[x0]=0,x0可去除。同理Pr[y0]=0可去除  
   由Bayes：∀y，Pr[x|y]=Pr[x] ⇒ ∀y，Pr[y|x]=Pr[y]  
@@ -123,12 +138,13 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 >答：BTC产生一个区块即记账时，记账者须通过调整区块中的nonce值，使得该区块的Hash值的前n位都是0。其计算次数平均为2的n次方。记账者通过这种方式来争夺记账权。由于包含虚假记录的区块会被其他记账者舍弃，而产生区块又要消耗大量的成本，导致记账者更愿意诚实地产生区块。
 
 17.给出一张图，标出Linux操作系统中的Stack和Heap的位置。  
-图略  
+>图略  
 画图注意事项：  
 1.生长方向：栈向低地址扩展(即”向下生长”)，是连续的内存区域；堆向高地址扩展(即”向上生长”)，是不连续的内存区域。这是由于系统用链表来存储空闲内存地址，自然不连续，而链表从低地址向高地址遍历。  
 2.起始地址。  
 3.体现ASLR。  
 4.注意32位系统和64位系统的区别。  
+
 18.如何防范缓冲区溢出？  
 >答：1.使用安全形式的printf(); 不使用printf(buffer)  
 2.Review loop bounds for off-by-one errors  
@@ -143,9 +159,8 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 20.简述防范栈溢出DEP机制和ASLR机制。  
 
 21.简述前后断言法。  
-【断言（assertion）】：在程序语句间插入刻画程序状态（即程序变量的取值）的一阶谓词公式，称为断言。  
+>【断言（assertion）】：在程序语句间插入刻画程序状态（即程序变量的取值）的一阶谓词公式，称为断言。  
 前后断言法：前断言P指明程序执行前，程序变量应有的性质（程序正确执行的前提）。后断言Q刻画了程序结束时的程序状态空间（程序所应实现任务的描述）。一对前后断言{P，Q}也称为程序S的规约（specification）。  
-
 部分正确性的证明方法：  
 前断言逐步向后断言推导；  
 循环：找一个断言，在执行循环时成立，在退出循环时仍成立（不变式）  
@@ -243,122 +258,123 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
 > 命令注入  XSS  溢出  不安全算法  缺盐  
 
-2.ring和虚拟内存都是基于隔离的安全机制，其中ring是（）和（）之间的隔离，虚拟内存是（）和（）之间的隔离。  
+2.ring和虚拟内存都是基于隔离的安全机制，其中ring是（）和（）之间的隔离，虚拟内存是（）和（）之间的隔离。  (A)
 > A OS 应用 应用 应用 B OS 应用 应用 OS C 应用 OS OS 应用 D 应用 应用 应用 OS  
 
-3.Reference Monitor与OS Kernel的关系是：（）  
+3.Reference Monitor与OS Kernel的关系是：（B）  
 > A RM包含Kernel B Kernel包含RM C RM=Kernel D RM ∩ Kernel=φ  
 
-4.HASH函数的主要用途：（）  
+4.HASH函数的主要用途：（ABCD）  
 > A 消息摘要/消息指纹 B 用作数字签名（可证明安全的）C 密文正确性验证 D 实用的伪随机函数  
 
-5.以下哪一条不是Hash函数的性质：（）
+5.以下哪一条不是Hash函数的性质：（NONE）
 > A混合变换（对任意输入，与均匀分布二进制串计算不可区分） B 抗碰撞 C 抗原像攻击 D 实用有效性（h的计算时间复杂度是低阶多项式的，最好是线性）
 
-6.BTC的51%算力攻击者能够：（）  
+6.BTC的51%算力攻击者能够：（ABCD）  
 >A Reverse transactions that he sends while he’s in control  
 B Prevent some or all transactions from gaining any confirmations  
 C Prevent some or all other generators from getting any generations  
 D Double spend Bitcoins  
 
-7.BTC的51%算力攻击者不能够：（）  
+7.BTC的51%算力攻击者不能够：（ABCDE）  
 >A Reverse other people’s transactions
 B Prevent transactions from being sent at all (they’ll show as 0/unconfirmed)
 C Change the number of coins generated per block
 D Create coins out of thin air
 E Send coins that never belonged to him
 
-8.libsafe拦截不安全的lib C函数如gets, strcpy , 代之libsafe版本的gets, strcpy 等等，这个机制最晚可在（）阶段实施。  
+8.libsafe拦截不安全的lib C函数如gets, strcpy , 代之libsafe版本的gets, strcpy 等等，这个机制最晚可在（C）阶段实施。  
 >A 代码编写  B 编译  C 运行  D代码审计  
  
-9.沙箱是一种基于（）的安全机制。  
+9.沙箱是一种基于（A）的安全机制。  
 >A 隔离   B 缺省安全   C 模块化   D密码学  
 
-10.RM的NEAT原则的E的含义是：（）
+10.RM的NEAT原则的E的含义是：（A）
 >A 可评估  B 不可绕过   C 持续可用   D 防篡改  
 
-11.防火墙的主要功能是（）。  
+11.防火墙的主要功能是（D）。  
 >A 完整性检测  B 防垃圾邮件   C 安全审计  D访问控制  
 
-12.通过用户提交的附加信息，对主体身份进行证实的过程，称为()。  
->A非否认   B访问控制   C身份认证    D公证  
+12.
 
-13.以下哪种攻击属于被动攻击。()  
+13.以下哪种攻击属于被动攻击。(C)  
 >A篡改  B重放   C窃听    D拒绝服务  
 
-14.通过欺骗管理员进行信息系统攻击的方式称为()。  
+14.通过欺骗管理员进行信息系统攻击的方式称为(C)。  
 >A重放    B arp欺骗   C社会工程   D合谋攻击  
 
-15.IP协议提供的是一种(  )的服务。  
+15.IP协议提供的是一种( B )的服务。  
 >A可靠无连接   B不可靠无连接     C不可靠有连接    D面向连接  
 
-16.MD5算法是（）的。  
+16.MD5算法是（B）的。  
 >A单向可逆   B单向不可逆   C双向可逆    D双向不可逆  
 
-17.指纹作为一种身份认证机制，属于（）。  
+17.指纹作为一种身份认证机制，属于（C）。  
 >A KNOW STH   B HAVE STH    C BE STH   D SEE STH  
 
-18.以下哪个口令强度较好？（）  
+18.以下哪个口令强度较好？（D）  
 >A.QWERTYUIOP   B.19870909    C.ADMINISTRATOR   D.AFPKWIQNA  
 
-19.以下哪个是信息安全类的知名国际会议？  
+19.以下哪个是信息安全类的知名国际会议？ (D) 
 >A ACM CCS  B USENIX security  C IEEE S&P    D 以上都是  
 
-20.通过用户提交的附加信息，对主体身份进行证实的过程，称为：（）  
+20.通过用户提交的附加信息，对主体身份进行证实的过程，称为：（C）  
 >A.访问控制  B.标识   C.身份鉴别   D.授权  
 
-21*.Kerberos被用于在分布式网络环境下，引入一个可以信任的第三方，提供用户与()之间的鉴别服务。  
+21*.Kerberos被用于在分布式网络环境下，引入一个可以信任的第三方，提供用户与(C)之间的鉴别服务。  
 >A.数据库系统      B.操作系统       C.服务器      D.CA  
 
-22.在PGP协议中，如果Alice想要给Bob发送一段加密文本，则会用到___的公钥，如果Bob想要在发给Alice的邮件中证明自己身份的真实性，则会用到()的私钥。  
+22.在PGP协议中，如果Alice想要给Bob发送一段加密文本，则会用到(B)的公钥，如果Bob想要在发给Alice的邮件中证明自己身份的真实性，则会用到(B)的私钥。  
 >A.Alice   B.Bob   C.CA    D.系统  
 
 23.以下安全服务，数字签名技术不能提供的是：()  
 >A 报文鉴别  B报文非否认  C报文加密  D实体鉴别  
 
-24.网络黑客篡改主页的行为，属于破坏信息安全哪个属性的行为？()  
+24.网络黑客篡改主页的行为，属于破坏信息安全哪个属性的行为？(B)  
 >A 机密性    B 完整性  C 可用性   D 非否认性   
 
-25.拒绝服务攻击，属于破坏信息安全哪个属性的行为？()  
+24+.拒绝服务攻击，属于破坏信息安全哪个属性的行为？(C)  
 >A 机密性    B 完整性  C 可用性   D 非否认性  
 
-26.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？()  
+24++.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？(A)  
 >A 机密性    B 完整性  C 可用性   D 非否认性  
 
-27.在银行环境中实行的访问控制策略中，用户分为了出纳员、系统管理员、顾客、管理者和审计员。该策略最有可能是（    ）。  
+25.  
+26.  
+27.在银行环境中实行的访问控制策略中，用户分为了出纳员、系统管理员、顾客、管理者和审计员。该策略最有可能是（  C  ）。  
 >A 强制访问控制策略   B自主访问控制策略  C基于角色的访问控制策略  D BLP访问控制策略  
 
-28.(  )策略组合了商业的自主和法律上的强制控制。其目标是阻止引起利益冲突的信息流。业务服务员可以代表在同一个业务部门的几个客户，这将引起利益冲突。  
+28.( B )策略组合了商业的自主和法律上的强制控制。其目标是阻止引起利益冲突的信息流。业务服务员可以代表在同一个业务部门的几个客户，这将引起利益冲突。  
 >A BLP策略   B中国墙策略   C Biba策略    DClark-Wilson策略  
 
-29*.隐蔽通道利用共享资源作为通信通路，这要求空间共享或时间共享。（      ）使用共享资源的属性。（    ）使用在对共享资源访问中的时态或排序关系。  
+29*.隐蔽通道利用共享资源作为通信通路，这要求空间共享或时间共享。（  C    ）使用共享资源的属性。（  D  ）使用在对共享资源访问中的时态或排序关系。  
 >A 隐蔽网络通道   B隐蔽数据库信道     C隐蔽存储信道    D隐蔽定时信道  
 
-30.以下哪个不是信息安全工具（       ）  
+30.以下哪个不是信息安全工具（   C    ）  
 >A 腾讯安全管家   B Wire Shark   C Eclipse    D  PGP  
 
-31.迄今为止，因（）领域成果获得图灵奖的人数是最多的。
+31.迄今为止，因（D）领域成果获得图灵奖的人数是最多的。
 >A 密码学  B 人工智能  C 计算复杂性理论   D程序设计语言与编译器  
 
-32.下列哪个工具可对目标进行端口检测？  
+32.下列哪个工具可对目标进行端口检测？B  
 >A. sqlmap  B.nmap  C.wireshark  D.Github  
 
-33.实验一中，利用wireshark提取出来的数据，在某一个TCP流中显示cat flag命令的结果为：ZmxhZ3tyZXZlcnNlX3NoZWwxbDFsbGwxbH0KCg==，请问该编码方式是？  
+33.实验一中，利用wireshark提取出来的数据，在某一个TCP流中显示cat flag命令的结果为：ZmxhZ3tyZXZlcnNlX3NoZWwxbDFsbGwxbH0KCg==，请问该编码方式是？D  
 >A. Unicode B.Hash C. Sha1 D.Base64  
 
-34.在实验三中，我们利用了以下哪个工具对程序进行逆向分析？  
+34.在实验三中，我们利用了以下哪个工具对程序进行逆向分析？C  
 >A.Nmap  B.AWVS  C.Ida  D.Burp Suite  
 
-35.非确定性图灵机在多项式时间可解的问题（也是确定性图灵机多项式时间可验证的问题）称之为：（    ）。  
+35.非确定性图灵机在多项式时间可解的问题（也是确定性图灵机多项式时间可验证的问题）称之为：（ B   ）。  
 >A P问题  B NP问题  C NPC问题  D NP-Hard问题  
 
-36.确定性图灵机在多项式时间可解的问题称之为：（    ）。  
+35+.确定性图灵机在多项式时间可解的问题称之为：（ A   ）。  
 >A P问题  B NP问题  C NPC问题  D NP-Hard问题  
 
-37.若问题π∈NP，且对∀π’∈NP，都有π’∝π,则π为：（    ）。  
+35++.若问题π∈NP，且对∀π’∈NP，都有π’∝π,则π为：（ C   ）。  
 >A P问题  B NP问题  C NPC问题  D NP-Hard问题  
 
-38.以下哪个语言是非图灵完备的？（     ）  
+36.以下哪个语言是非图灵完备的？（  C   ）  
 >A λ验算  B C语言  C 正则语言  D Javascript  
 
 
@@ -500,14 +516,18 @@ H(C) = -1/8log(1/8) - 7/16log(7/16) - 1/4 log(1/4) - 3/16 log(3/16) ≈ 1.85
 char buf[1024];  
 gets(buf);  
 }  
+  
 △2  strcpy(dst, src);  
+  
 △3  sprintf(dst, “%s”, src);  
+  
 △4  void getUserInfo(char *username, struct _USER_INFO_2 info){  
 WCHAR unicodeUser[UNLEN+1];  
 MultiByteToWideChar(CP_ACP, 0, username, -1, unicodeUser, sizeof(unicodeUser));  
 }  
 
 3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
+  
 4. 以下这段程序有什么安全缺陷？如何进行利用？如何进行预防？  
 > if (!access("/tmp/X", W_OK)) //access系统调用检查了真实 UID / GID 是否拥有访问文件的权限，有的话返回 0。
 { f = open("/tmp/X", O_WRITE); write_to_file(f);  } //因为是set-uid root，所以防止用户越权写。
@@ -536,7 +556,7 @@ Y=C+X;
 
 7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
 答：  
-1.选课系统  
+>1.选课系统  
 机密性破坏导致的后果：学生选课信息泄露，各班选课人数泄露→攻击者可以利用这些信息帮助自己更容易选中课程……  
 完整性破坏导致的后果：修改别人的选课数据→攻击者可以是自己或他人非法选中课程，去掉掉其他人选中的课程……  
 可用性破坏导致的后果：选课系统宕机，同学们某一时刻无法选课→导致选课周期延长，影响排课效率，浪费大家时间……  
