--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -512,19 +512,25 @@ H(C) = -1/8log(1/8) - 7/16log(7/16) - 1/4 log(1/4) - 3/16 log(3/16) ≈ 1.85
           
           
 2. 给一段不安全的C代码，指出问题，并予以修改。          
->△1  void main() {  
+>△1  
+```
+void main() {  
 char buf[1024];  
 gets(buf);  
 }  
+```
   
 △2  strcpy(dst, src);  
   
 △3  sprintf(dst, “%s”, src);  
   
-△4  void getUserInfo(char *username, struct _USER_INFO_2 info){  
+△4  
+```
+void getUserInfo(char *username, struct _USER_INFO_2 info){  
 WCHAR unicodeUser[UNLEN+1];  
 MultiByteToWideChar(CP_ACP, 0, username, -1, unicodeUser, sizeof(unicodeUser));  
 }  
+```
 
 3. 用BAN逻辑分析一段协议是否实现了某个安全功能。  
   
@@ -540,6 +546,7 @@ else  fprintf(stderr, "Permission denied\n");
 
 6.根据以下代码，判断：假设程序执行前A、B、C的密级分别为低、中、高，根据基于BLP的信息流控制模型进行分析，程序执行完成后X、Y、Z的密级应当是什么？ 
 
+```
 X=0;  
 Y=1;  
 Z=A;  
@@ -553,6 +560,8 @@ for(i=0;i<5;i++){
 }  
 X=3;  
 Y=C+X;  
+```
+
 
 7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
 答：  
@@ -567,6 +576,8 @@ Y=C+X;
 可用性：医疗信息系统＞  
   
 8.代码demo.c经编译后，反汇编得到的汇编代码如下，请问编译器使用了什么安全机制，其原理是什么？  
+
+```
 (gdb) disas main  
 Dump of assembler code for function main: 
 0x08048394 <main+0>:    lea     0x4(%esp),%ecx  
@@ -592,7 +603,8 @@ Dump of assembler code for function main:
 0x080483d6 <main+66>:   lea     0xfffffffc(%ecx),%esp  
 0x080483d9 <main+69>:   ret     
 End of assembler dump.  
-
+```   
+```   
 附：demo.c  
 int main() {  
     int i;  
@@ -601,11 +613,13 @@ int main() {
     buffer[0] = 'a';  
     return 0;  
 }  
+```
 
 9.解释以下栈计算机指令的完成的功能。………………  
 指令集：load：将变量放置于栈顶  store：将栈顶值存于变量  pop dup  
 add：将栈顶2元素相加，和放入栈顶 sub mul div rem neg shl shr and or xor inc ...  
 （指令含义参照java字节码的含义）   
+ ```
  load x  
  load y  
  load z  
@@ -614,6 +628,7 @@ add：将栈顶2元素相加，和放入栈顶 sub mul div rem neg shl shr and o
  load u  
  add  
  store m  
+```
 
 10.分析以下代码，回答如何逆向得到input中的数据，不要求写出代码，写出完整思路即可。  
 
