--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -39,10 +39,8 @@
 【可忽略量】函数ℇ(n):N→R称为关于n的一个可忽略量（ℇ(n)可忽略），IF其倒数1/ℇ(n)是关于n的一个非多项式有界的量。  
 【压倒性概率】如果ℇ(n)是一个可忽略量，那么1-ℇ(n)就是一个压倒性的量/概率。  
 【计算不可区分】two families of distributions are 【computationally indistinguishable】 if no efficient algorithm can tell the difference between them except with small probability.  
-【问题】问题为<Σ，L，φ>，其中，Σ：问题所用的符号集合。Σ*：Σ中有限串集合。其中L⊆Σ*：问题的所有实例集合。φ：L→Σ*。  
-
+【问题】问题为<Σ，L，φ>，其中，Σ：问题所用的符号集合。Σ\*：Σ中有限串集合。其中L⊆Σ\*：问题的所有实例集合。φ：L→Σ\*。  
 【判定问题】0，1∈Σ且φ（L)⊂{0，1},记为π=<Σ，L，φ>   
-
 【P问题】DTM多项式时间可解问题。  
 【NP问题】NTM多项式时间可解（DTM多项式时间可验证）问题。  
 【NPC问题】若π∈NP，且对∀π’∈NP，都有π’∝π,则π∈NPC。  
@@ -69,7 +67,9 @@
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
 
 #### 简答  
-1.信息系统通常由哪些部分组成？答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
+1.信息系统通常由哪些部分组成？  
+>答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
+
 2.对信息系统进行安全分级主要依据什么？  
 >答：信息系统承载的使命、信息系统包含的价值、信息系统被破坏后造成的后果，在衡量其价值和后果时，不仅要考虑直接的价值和损失，还要考虑间接的价值和损失。  
 
@@ -156,7 +156,7 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 19.简述防范栈溢出的StackGuard的canary机制。  
 >答：StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则停止程序执行。  
 
-20.简述防范栈溢出DEP机制和ASLR机制。  
+20.简述防范栈溢出DEP机制和ASLR机制。(请吕文杰同学补充)  
 
 21.简述前后断言法。  
 >【断言（assertion）】：在程序语句间插入刻画程序状态（即程序变量的取值）的一阶谓词公式，称为断言。  
@@ -177,9 +177,9 @@ q(x,y)⇒E(x,y)∈W
 5）证明终止条件成立。即对于每条从i到j，且是循环一部分的通路α，有  
 q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]  
 
-22.简述污点追踪。  
+22.简述污点追踪。（请房建同学补充）  
 
-23.简述符号执行。  
+23.简述符号执行。（请房建同学补充）  
 
 24.简单介绍K近邻算法的思想和方法。  
 
@@ -196,7 +196,6 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 
 30.导致公钥密码算法出现的对称密码的几个主要问题是什么?  
 >密钥管理的密钥爆炸问题、密钥分配中的可信通道问题、和难以实现非否认。
-
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -292,10 +291,14 @@ E Send coins that never belonged to him
 10.RM的NEAT原则的E的含义是：（A）
 >A 可评估  B 不可绕过   C 持续可用   D 防篡改  
 
+10+.RM的NEAT原则的T的含义是：（D）
+>A 可评估  B 不可绕过   C 持续可用   D 防篡改  
+
 11.防火墙的主要功能是（D）。  
 >A 完整性检测  B 防垃圾邮件   C 安全审计  D访问控制  
 
-12.
+12.PGP的主要安全功能包括（）。  
+>A 加密  B 签名  C 流量监听  D
 
 13.以下哪种攻击属于被动攻击。(C)  
 >A篡改  B重放   C窃听    D拒绝服务  
