--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -201,7 +201,7 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
 2.INTEL通过控制寄存器【 CR0    】提供保护模式。  
 3.操作系统的保护模式同实模式的根本区别是【进程内存受保护与否】。  
-4.kerckhoffs原则是【  密码算法的安全性应基于密钥的保密，而不是基于算法的细节的保密  】。 
+4.kerckhoffs原则是【  密码算法的安全性应基于密钥的保密，而不是基于算法的细节的保密  】。  
 4+. kerckhoffs原则是：密码算法的安全性应基于【密钥】的保密，而不是基于算法的细节的保密。  
 5.用（P,C,K,E,D）表示密码系统的三个空间和加解密算法，那么：  
 > ∀k∈K，∃【（ek∈E，dk∈D）】∀x∈P【（dk（ek（x））=x）】  
@@ -342,9 +342,20 @@ E Send coins that never belonged to him
 24++.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？(A)  
 >A 机密性    B 完整性  C 可用性   D 非否认性  
 
-25.下列不能出现在shellcode中的字符是      
+25.下列不能出现在shellcode中的字符是（ ）      
 >A \n     B \t    C 0x00    D 0x10    
-26.  
+
+26.unlink技术是堆攻击的一种，其实现原理是：     
+FD = p->fd     
+BK = p->bk     
+FD->bk = BK     
+BK->fd = FD       
+在64位的linux系统中，要使用ulink攻击使得__malloc_hook地址写成one_gadget的地址，下面可以实现的是(A)       
+>A p->fd = &\_\_malloc_hook - 0x18, p->bk = &one_gadget     
+B p->fd = &\_\_malloc_hook - 0x10, p->bk = &one_gadget - 0x10      
+C p->fd = &\_\_malloc_hook - 0x18, p->bk = &one_gadget - 0x10     
+D p->fd = &\_\_malloc_hook, p->bk = &one_gadget      
+     
 27.在银行环境中实行的访问控制策略中，用户分为了出纳员、系统管理员、顾客、管理者和审计员。该策略最有可能是（  C  ）。  
 >A 强制访问控制策略   B自主访问控制策略  C基于角色的访问控制策略  D BLP访问控制策略  
 
@@ -496,27 +507,27 @@ E Send coins that never belonged to him
 >   K2(1/4)      2           3  
 >   K3(1/4)      3           4  
          
-【分析】：           
+>【分析】：           
 Pr[1] = 1/4 * 1/2=1/8        
 Pr[2] = 3/4 * 1/2 + 1/4 * 1/4 = 7/16     
 Pr[3] = 1/4 * 3/4 + 1/4 * 1/4 = 1/4     
 Pr[4] = 1/4 * 3/4 = 3/16      
          
-Pr[a|1] = 1 		Pr[b|1] = 0      
+>Pr[a|1] = 1 		Pr[b|1] = 0      
 Pr[a|2] = 1/7 		Pr[b|2] = 6/7       
 Pr[a|3] = 1/4		Pr[b|3] = 3/4      
 Pr[a|4] = 0		Pr[b|4] = 1        
        
-只有c = 3时，Pr[x|3] = Pr[x]，满足完善保密性，其他不满足，所以不满足完善保密性.           
+>只有c = 3时，Pr[x|3] = Pr[x]，满足完善保密性，其他不满足，所以不满足完善保密性.           
             
-(ps：log底数均为2)         
+>(ps：log底数均为2)         
 H(P) = -1/4log(1/4) - 3/4log(3/4) = 2 - 3/4log(3) ≈ 0.81           
 H(K) = -1/2log(1/2) - 1/4log(1/4) - 1/4log(1/4) = 1.5             
 H(C) = -1/8log(1/8) - 7/16log(7/16) - 1/4 log(1/4) - 3/16 log(3/16) ≈ 1.85                   
           
           
 2. 给一段不安全的C代码，指出问题，并予以修改。          
->△1  
+△1  
 ```
 void main() {  
 char buf[1024];  
@@ -574,6 +585,7 @@ Y=C+X;
 完整性破坏导致的后果：修改别人的选课数据→攻击者可以是自己或他人非法选中课程，去掉掉其他人选中的课程……  
 可用性破坏导致的后果：选课系统宕机，同学们某一时刻无法选课→导致选课周期延长，影响排课效率，浪费大家时间……  
 ……  
+分析其他系统  
 ……  
 机密性：学工在线系统≈医疗信息系统＞选课系统  
 完整性：医疗信息系统＞  
@@ -878,17 +890,7 @@ D. \x01\x00\x00\x00AAAAAAAA
  由于此程序编译运行在32位系统上，则之后需要4个字节修改flagA，再需要4个字节修改flagB，因此选A。      
      
        
-(3).unlink技术是堆攻击的一种，其实现原理是：     
-FD = p->fd     
-BK = p->bk     
-FD->bk = BK     
-BK->fd = FD       
-在64位的linux系统中，要使用ulink攻击使得__malloc_hook地址写成one_gadget的地址，下面可以实现的是(A)       
-p->fd = &__malloc_hook - 0x18, p->bk = &one_gadget     
-p->fd = &__malloc_hook - 0x10, p->bk = &one_gadget - 0x10      
-p->fd = &__malloc_hook - 0x18, p->bk = &one_gadget - 0x10     
-p->fd = &__malloc_hook, p->bk = &one_gadget      
-     
+
 (4).ROP、ret2libc      
      
 Q:某程序运行到某函数时函数调用栈如图一所示，图二为可执行文件的部分函数调用地址，已知程序在读取用户输入到变量 *str* 时存在栈溢出。          
