--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -820,7 +820,7 @@ f(x)=[65(x-3)(x-5)+36(x-2)(x-5)+96(x-2)(x-3)]mod19
        
 (1).Question:在没有栈保护的情况下，下面代码有什么漏洞，漏洞点在哪里，如何触发？         
 #include "stdio.h"    
-int main(int argc, char const *argv[])    
+int main(int argc, char const \*argv[])    
 {    
     char str[10];
     printf("Please input a string:");
@@ -853,23 +853,23 @@ int main()
       
 假设以上代码将在32位的机器上编译运行，foo函数的栈结构如下：      
 
----------     
+\---------     
 | ... |     
----------      
+\---------      
 | ret |            
----------    
+\---------    
 |oldEBP|      
----------<-EBP      
+\---------<-EBP      
 | flagB |      
----------     
+\---------     
 | flagA |           
----------      
+\---------      
 | buf |         
----------     
+\---------     
 | buf |           
---------- <-ESP     
+\--------- <-ESP     
 | ... |            
----------      
+\---------      
       
 (a).存在漏洞的代码在第( C )行     
 A. 02    
@@ -896,7 +896,7 @@ D. \x01\x00\x00\x00AAAAAAAA
 Q:某程序运行到某函数时函数调用栈如图一所示，图二为可执行文件的部分函数调用地址，已知程序在读取用户输入到变量 *str* 时存在栈溢出。          
 请根据题目所给信息构造输入字符串，获取**地址** 0x080485D0 处的字符串，并简略说明原理。(程序为32位可执行文件，**小端**存储)         
       
-```     
+    
 	      		stack
 esp	 --> |0x08048515|										
 	 --> |0x0 		|					
@@ -904,11 +904,11 @@ esp	 --> |0x08048515|
          --> |0x1 		|						 		部分函数的调用地址
 ebp	 --> |0x0 		|						printf@plt				0x08048370
 	 --> |0xf7e30830|						gets@plt				0x08048380
-	 --> |0x0804859b|						__stack_chk_fail@plt	0x08048390
+	 --> |0x0804859b|						_\_stack_chk_fail@plt	0x08048390
 	 --> |0x1 		|						puts@plt				0x080483A0	
      --> |0xf7e30828|
-	 		图一												图二
-```
+	 		图一										图二
+
       
        
          
