--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -670,10 +670,14 @@ signed __int64 check()
   return 1LL;  
 }  
 ```  
-要点：随机数生成，逆向的顺序，异或。  
-先用种子srand(0xDEADBEEF)生成64个随机数，前32位是unsigned char类型，后32位是int类型，我们通过IDA得到marg_num的值，先和后32位的随机数异或，如marg_num[i]xor Rand[32+i],再减去Rand[i]%64则得到了input[i].  
-
-#### 证明  
+要点：随机数生成，逆向的顺序，异或。    
+random() 函数在随机种子固定的情况下会产生固定的随机序列，所以可以写程序获取在种子是 0xDEADBEEF 时，random()产生的64个随机数。       
+marg_num 可以通过IDA从二进制文件中获取到。逆向进行程序逻辑，先取随机序列的后32个与marg_num依次异或，然后将异或的结果依次减去         
+随机序列前32个模64，就得到了input。即input[i] = (random_list[i+32] xor marg_num[i]) - (random_list[i] mod 64)。             
+        
+        
+         
+#### 证明                
 1.通过归约的方式，证明如果汉密尔顿回路问题能够有多项式时间复杂度的算法，那么“限制度的生成树问题”就一定有多项式时间复杂度的算法。  
 
 #### 设计  
