--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -342,7 +342,7 @@ E Send coins that never belonged to him
 24++.用wireshark进行报文嗅探，属于破坏信息安全哪个属性的行为？(A)  
 >A 机密性    B 完整性  C 可用性   D 非否认性  
 
-25.下列不能出现在shellcode中的字符是（ ）      
+25.下列不能出现在shellcode中的字符是（C ）      
 >A \n     B \t    C 0x00    D 0x10    
 
 26.unlink技术是堆攻击的一种，其实现原理是：     
@@ -496,7 +496,7 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
 2. 已知一个监测器，能发出8种不同的信号（从x1到x8），已知前四种发生的概率是1/1024,后四种发生的概率是255/1024；请给出一种二进制编码方式，使得在通信时，信号码长的数学期望值低于2.6比特。  
-3.RSA算法中，公钥为7，私钥为23，n=187。假设消息M=87，请给出使用公钥加密的计算过程：C=（     ）。假设收到的密文为11，请给出使用私钥解密的计算过程：P=（      ）。
+3.RSA算法中，公钥为7，私钥为23，n=187。假设消息M=87，请给出使用公钥加密的计算过程：C=（  (87^7)%187 = 43   ）。假设收到的密文为11，请给出使用私钥解密的计算过程：P=（  (11^23)%187 = 88    ）。
 
 
 
@@ -576,7 +576,7 @@ for(i=0;i<5;i++){
 X=3;  
 Y=C+X;  
 ```
-
+答：X,Y,Z的密级是中,高,中.（过程略）
 
 7.以海大教务处选课系统、学工在线系统、医院的医疗信息系统为例，分别说明三个系统在机密性、完整性、可用性方面的保护等级的高低及原因。  
 答：  
