刘魏鑫宁补充答案

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -254,7 +254,7 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 35+++++.Race Condition（竞态掉件），破坏的是信息安全属性中的【（系统）完整】性。
 
 #### 选择  
-1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（  ），2的有（  ），3的有（  ）。
+1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（ 命令注入、XSS ），2的有（ 溢出 ），3的有（ 不安全算法、缺盐 ）。
 > 命令注入  XSS  溢出  不安全算法  缺盐  
 
 2.ring和虚拟内存都是基于隔离的安全机制，其中ring是（）和（）之间的隔离，虚拟内存是（）和（）之间的隔离。  (A)
@@ -330,7 +330,7 @@ E Send coins that never belonged to him
 22.在PGP协议中，如果Alice想要给Bob发送一段加密文本，则会用到(B)的公钥，如果Bob想要在发给Alice的邮件中证明自己身份的真实性，则会用到(B)的私钥。  
 >A.Alice   B.Bob   C.CA    D.系统  
 
-23.以下安全服务，数字签名技术不能提供的是：()  
+23.以下安全服务，数字签名技术不能提供的是：(C)  
 >A 报文鉴别  B报文非否认  C报文加密  D实体鉴别  
 
 24.网络黑客篡改主页的行为，属于破坏信息安全哪个属性的行为？(B)  
@@ -413,7 +413,7 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 16.通过缓冲区溢出导致程序崩溃的先决条件是free() 函数未检查fd/bk指针。×  
 17.通过缓冲区溢出实现代码注入的先决条件是栈地址已知，栈可执行。√  
 18.通过缓冲区溢出导致程序崩溃的先决条件是未受保护的栈，通过覆盖关键信息可使程序崩溃。√  
-19.通过缓冲区溢出实现Arc注入的先决条件是free() 函数未检查fd/bk指针。
+19.通过缓冲区溢出实现Arc注入的先决条件是free() 函数未检查fd/bk指针。×
 20.防止缓冲区溢出应使用安全C函数如strcpy(), strcat(), sprintf(), gets(), scanf()。×  
 21.StackGuard 在帧指针和返回地址之间插入一个标记值（canary），返回前会检查canary，如果canary值不变的话，则抛出异常。×  
 22.使用MAC=h(k||m)做消息鉴别是不安全的，应当使用h(k||m||k)。×  
