补充房建提供的答案

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -178,8 +178,10 @@ q(x,y)⇒E(x,y)∈W
 q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]  
 
 22.简述污点追踪。（请房建同学补充）  
+>标记所有能够被外部用户修改的数据为污点数据，追踪污点数据的数据流向（比如通过追踪赋值等运算间接影响的数据），判断它们是否会影响到程序的某些关键操作（SQL注入，特殊系统命令等）的一种分析方法。  
 
 23.简述符号执行。（请房建同学补充）  
+>通过程序分析的方法，分析不同输入而导致的程序不同的执行流程。其核心是将输入变为符号值，将程序的执行流程变为变换为一系列关于输入符号True和False的求解问题，根据这个求解布尔可满足性问题。  
 
 24.简单介绍K近邻算法的思想和方法。  
 
