--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -155,10 +155,14 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
 
 19.简述防范栈溢出的StackGuard的canary机制。  
 >答：StackGuard 在帧指针和返回地址之间插入一个标记值（canary），溢出覆盖返回地址时会同时覆盖到canary，返回前会检查canary，如canary发生改变则停止程序执行。  
-
-20.简述防范栈溢出DEP机制和ASLR机制。(请吕文杰同学补充)  
-
-21.简述前后断言法。  
+              
+20.简述防范栈溢出DEP机制和ASLR机制。(请吕文杰同学补充)     
+DEP: 数据执行保护(Data Execution Prevetion)，原理是将数据页标识为不可执行(如默认的堆页和栈页)，          
+如果程序尝试在数据页上执行代码，此时CPU就会抛出异常。                  
+ALSR: 地址空间格局的随机化(Address Space Layout Randomization)，是系统应用的一种针对缓存区溢出的安全保护技术。ALSR 通过对堆、          
+栈、共享库映射等加载地址的随机化，来增加攻击者预测目的地址的难度。随机化的方法是将原先固定的加载地址加上或者减去一个随机值，得到新的加载地址。                        
+                   
+21.简述前后断言法。             
 >【断言（assertion）】：在程序语句间插入刻画程序状态（即程序变量的取值）的一阶谓词公式，称为断言。  
 前后断言法：前断言P指明程序执行前，程序变量应有的性质（程序正确执行的前提）。后断言Q刻画了程序结束时的程序状态空间（程序所应实现任务的描述）。一对前后断言{P，Q}也称为程序S的规约（specification）。  
 部分正确性的证明方法：  
