--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -258,7 +258,16 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 35++.分布式拒绝服务攻击，是破坏信息安全属性中的【可用】性。  
 35+++.MAC伪造，破坏的是信息安全属性中的【完整】性。  
 35++++.控制流劫持，破坏的是信息安全属性中的【（系统）完整】性。  
-35+++++.Race Condition（竞态掉件），破坏的是信息安全属性中的【（系统）完整】性。
+35+++++.Race Condition（竞态掉件），破坏的是信息安全属性中的【（系统）完整】性。  
+36.以下代码获取用户输入：  
+void main(){  
+char b[100];  
+gets(b);  
+}   
+代码存在【    】漏洞。  
+37.盲注中Timing Attack属于一种侧信道攻击，它的原理是【       】。  
+38.对于elf格式的程序，开启【      】会导致程序的got表和dynamic段不可读写，并且加载时直接完成所有函数重定位绑定工作。
+39.反序列化漏洞是指Java、PHP等语言的类在反序列化时，没有生成对象的【      】做限制。攻击者可利用该漏洞构造而已输入，执行任意代码。
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（ 命令注入、XSS ），2的有（ 溢出 ），3的有（ 不安全算法、缺盐 ）。
