--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -408,6 +408,9 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 36.以下哪个语言是非图灵完备的？（  C   ）  
 >A λ验算  B C语言  C 正则语言  D Javascript  
 
+37.区块链的PoW共识机制是基于（    B    ）机制的。  
+>A 拜占庭容错  B 博弈论  C 数据镜像  D基于Hash的纠错码   
+
 
 #### 判断对错  
 1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
@@ -508,6 +511,15 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 83.如程序是部分正确且是终止的，则其为正确的。√  
 84.在随机数种子是一致的情况下，window和linux生成的随机数是相同的。 X   
 85.我们可以利用wireshark完成对ICMP数据包的监听。√  
+86.在区块链上，掌握了51%以上算力的节点可以将任意未记账交易中的接收者钱包替换掉且不被发现，但不能替换掉发送者身份。 X   
+87.之所以BTC的ASIC矿机能够达到GPU矿机千倍以上的速度，是因为BTC的区块Hash值的计算指令简单、对内存需求小、并行程度高。√  
+88.区块链的安全能否受到量子计算的影响，还要看量子计算能解决的问题类型、规模以及区块链使用的具体密码算法。√  
+89.一般情况下，公有链的智能合约是保密的。X   
+89+.一般情况下，公有链的智能合约是受到完整性保护的。√  
+90.PoET共识机制的缺点是：过分依赖于厂商、过分依赖硬件，因此厂商和漏洞都是该机制面临的威胁。√  
+91.一般情况下，公有链的智能合约是看不到源代码的。√  
+92.一般情况下，公有链的智能合约大家均可以查看它的字节码。√  
+92+.一般情况下，公有链的智能合约大家均可以查看它的源代码。X   
 
 #### 计算  
 1. 信息熵公式，给定信源的概率分布计算其信息熵  
