--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -199,10 +199,19 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 28.简单介绍神经网络、DNN及卷积神经网络。  
 
 29.BLP模型与Biba模型的区别是什么?  
->BLP模型是机密性模型，访问规则是上写下读，Biba模型是完整性模型，访问访问规则是上读下写。
+>BLP模型是机密性模型，访问规则是上写下读，Biba模型是完整性模型，访问访问规则是上读下写。  
 
 30.导致公钥密码算法出现的对称密码的几个主要问题是什么?  
->密钥管理的密钥爆炸问题、密钥分配中的可信通道问题、和难以实现非否认。
+>密钥管理的密钥爆炸问题、密钥分配中的可信通道问题、和难以实现非否认。  
+
+31.【海大18考研题】试回答以下两个问题：（1）数字签名能用于报文鉴别吗？为什么？（2）数字签名能用于实体鉴别吗？为什么？  
+
+32.【海大18考研题】如下图，你认为入侵检测系统的部署存在哪些问题？画出你认为正确的网络拓扑图。  
+（拓扑图：入侵检测系统部署在防火期之外、串联于路由器和防火墙中间位置而非旁路）  
+
+33.【海大18考研题】为什么说计算机网络的安全不仅限于保密性？举例说明，仅有保密性的计算机网络不一定是安全的。  
+
+34
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -266,8 +275,10 @@ gets(b);
 }   
 代码存在【    】漏洞。  
 37.盲注中Timing Attack属于一种侧信道攻击，它的原理是【       】。  
-38.对于elf格式的程序，开启【      】会导致程序的got表和dynamic段不可读写，并且加载时直接完成所有函数重定位绑定工作。
-39.反序列化漏洞是指Java、PHP等语言的类在反序列化时，没有生成对象的【      】做限制。攻击者可利用该漏洞构造而已输入，执行任意代码。
+38.对于elf格式的程序，开启【      】会导致程序的got表和dynamic段不可读写，并且加载时直接完成所有函数重定位绑定工作。  
+39.反序列化漏洞是指Java、PHP等语言的类在反序列化时，没有生成对象的【      】做限制。攻击者可利用该漏洞构造而已输入，执行任意代码。  
+40.【18海大考研题】对称密钥加密体系，即【加密】密钥和【解密】密钥相同或易相互推出的密码体制。  
+41.【18海大考研题】密钥管理包括：密钥产生、【】、注入、验证和使用。  
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（ 命令注入、XSS ），2的有（ 溢出 ），3的有（ 不安全算法、缺盐 ）。
@@ -410,6 +421,14 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 
 37.区块链的PoW共识机制是基于（    B    ）机制的。  
 >A 拜占庭容错  B 博弈论  C 数据镜像  D基于Hash的纠错码   
+
+38.【18海大考研题】以下哪种攻击不属于缓冲区溢出攻击？（    B    ）  
+>A 栈溢出  B HTML溢出  C 格式化字符串  D堆溢出  
+
+39.【18海大考研题】以下最有可能不使用密码技术的是：（    B    ）  
+>A 数字身份证  B 手机SIM卡  C 防火墙  D比特币  
+
+
 
 
 #### 判断对错  
