--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -428,8 +428,13 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 39.【18海大考研题】以下最有可能不使用密码技术的是：（    B    ）  
 >A 数字身份证  B 手机SIM卡  C 防火墙  D比特币  
 
+40.【19海大考研题】文本编辑程序P会偷偷将计算机中的银行账户发送给某个控制者，则P属于：（  C   ）  
+>A 计算机病毒    B计算机蠕虫    C特洛伊木马     D逻辑炸弹
 
+41.【19海大考研题】2018年引起较大影响的漏洞Meltdown（熔毁）利用的是（   C   ）中的一个缺陷，可使得攻击者获得操作系统kernel中的重要敏感数据，后来设计者通过改进推测执行修复了这个漏洞。
+>A windows操作系统    B Linux操作系统    C CPU     D C语言
 
+42.
 
 #### 判断对错  
 1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
