Update网络与信息安全样题
增加海大19年考研安全部分题目

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -211,7 +211,7 @@ q(x,y)^Rα(x,y)⇒[Ej(x,ra(x,y))≤Ej(x,y]
 
 33.【海大18考研题】为什么说计算机网络的安全不仅限于保密性？举例说明，仅有保密性的计算机网络不一定是安全的。  
 
-34
+34.【海大19考研题】什么是SSL协议？试说明SSL协议的简要过程以及提供的安全服务。
 
 #### 填空  
 1.软件脆弱性产生的top原因是：【不良的编程习惯】。  
@@ -279,6 +279,12 @@ gets(b);
 39.反序列化漏洞是指Java、PHP等语言的类在反序列化时，没有生成对象的【      】做限制。攻击者可利用该漏洞构造而已输入，执行任意代码。  
 40.【18海大考研题】对称密钥加密体系，即【加密】密钥和【解密】密钥相同或易相互推出的密码体制。  
 41.【18海大考研题】密钥管理包括：密钥产生、【】、注入、验证和使用。  
+42.【19海大考研题】一个密码体制可以描述为 <a href="https://www.codecogs.com/eqnedit.php?latex=M&space;=&space;E_{Ke}(D_{Kd}(M))" target="_blank"><img src="https://latex.codecogs.com/png.latex?M&space;=&space;E_{Ke}(D_{Kd}(M))" title="M = E_{Ke}(D_{Kd}(M))" /></a>，其中M为消息，Kd为加密密钥，Ke为解密密钥，D为加密算法，E为解密算法。当【 】时，称之为公钥密码体制。  
+43.【19海大考研题】入侵检测方法一般可以分为基于特征的入侵检测和基于【 】的入侵检测。  
+44.【19海大考研题】【 】技术，也称为分布式账本技术，是一种互联网数据库技术，其特点是去中心化和公开透明，让每个人均可参与数据库记录。比特币就是这种技术的典型应用。  
+45.【19海大考研题】Kerberos使用两个服务器，分别是鉴别服务器AS和【 】。  
+46.【19海大考研题】计算机病毒是一种会“传染”其他程序的程序，“传染”是通过修改【 】来把自身或其他变种复制进去完成的。   
+
 
 #### 选择  
 1.软件的脆弱性可分为三类：1.交互的解析有缺陷被误用、2.资源未保护好被滥用、3.安全机制有缺陷被突破；下面属于1的有（ 命令注入、XSS ），2的有（ 溢出 ），3的有（ 不安全算法、缺盐 ）。
@@ -432,9 +438,13 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 >A 计算机病毒    B计算机蠕虫    C特洛伊木马     D逻辑炸弹
 
 41.【19海大考研题】2018年引起较大影响的漏洞Meltdown（熔毁）利用的是（   C   ）中的一个缺陷，可使得攻击者获得操作系统kernel中的重要敏感数据，后来设计者通过改进推测执行修复了这个漏洞。
->A windows操作系统    B Linux操作系统    C CPU     D C语言
+>A windows操作系统    B Linux操作系统    C CPU     D C语言  
 
-42.
+42.【19海大考研题】量子通信协议中，设想对逐个粒子发送进行密钥配置，由于测不准原理，当窃听者试图观测传输的粒子时，其状态就有可能发生改变。所以在理想的量子通信中不存在（）。  
+>A 主动攻击    B 被动攻击    C 拒绝服务攻击    D 连通性攻击
+
+
+
 
 #### 判断对错  
 1.使用对称技术实现的篡改检测码MDC常称之为消息鉴别码MAC。√  
@@ -725,7 +735,19 @@ signed __int64 check()
 要点：随机数生成，逆向的顺序，异或。    
 random() 函数在随机种子固定的情况下会产生固定的随机序列，所以可以写程序获取在种子是 0xDEADBEEF 时，random()产生的64个随机数。       
 marg_num 可以通过IDA从二进制文件中获取到。逆向进行程序逻辑，先取随机序列的后32个与marg_num依次异或，然后将异或的结果依次减去         
-随机序列前32个模64，就得到了input。即input[i] = (random_list[i+32] xor marg_num[i]) - (random_list[i] mod 64)。             
+随机序列前32个模64，就得到了input。即input[i] = (random_list[i+32] xor marg_num[i]) - (random_list[i] mod 64)。  
+
+11.Alice开发了一个程序D，声称该程序可以判断任意程序是否会感染其他文件，感染返回True否则返回False。Bob开发了一个程序如下：
+```  
+程序 P  
+{  
+  if D(P) then return;  
+  else 感染文件系统中任意一个文件;  
+  return;  
+}
+```
+请问如果用程序D来判断程序P，会给出什么样的结果？
+这说明了什么？
         
         
          
