--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -484,6 +484,7 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 34.IP协议提供的是⼀一种可靠无连接的服务。×  
 35.IP协议提供的是⼀一种不可靠无连接的服务。√  
 36.篡改、重放和拒绝服务都不是被动攻击。√  
+36+.篡改、窃听和拒绝服务都不是被动攻击。×  
 37.加密过程可用公式Y=Ek(X)表示，其中Y、E、k、X分别表示明文、加密算法、密钥、密文。√  
 38.信息安全中，机密性比完整性更为重要。×  
 39.只有脆弱性，没有相关的威胁，则不构成风险。√  
