--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -116,10 +116,14 @@ euid(effective user ID)表示有效用户ID，euid，用于系统决定用户对
  always invoked  
  Tamper-proof  
  
-12.【必考，3分】给出一段关于CPU漏洞的描述，说明这段描述有什么错误。  
+12.【必考其一，3分】  
+1）给出一段关于CPU漏洞的描述，说明这段描述有什么错误。  
 以下描述来自畅销书《漏洞》"……"
 
 >答：缓存中存储的重要信息→缓存中存储的只是内存中的某些数据，要泄露的重要信息已经被kernel中的进程获得，只是通过缓存数据存在的潜信道来向用户态进程传递数据。（缓存命中和不命中导致访问时间的差异，从而推算出kernel中进程想要传递的比特）  
+
+2）下图来自某某，说明这段文字中有什么问题。  
+>答：  
 
 13.完善保密性有什么特点决定其不具有实用性？证明该特点。  
 >答：如Pr[x0]=0,则∀y，Pr[x0|y]=Pr[x0]=0,x0可去除。同理Pr[y0]=0可去除  
