--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -65,7 +65,13 @@
 【符号执行】程序分析的一种方法。使用符号变量代替具体值作为程序或函数的参数，并基于符号变量对程序进行模拟执行，获得程序的路径约束。通过对约束进行求解，可获得高测试覆盖率的测试用例集，从而更有效发现程序错误。  
 【动态符号执行】以具体的数值作为输入执行程序代码，在程序实际执行路径的基础上，用符号执行技术进行分析，提取路径的约束表达式，根据路径搜索策略（深度、广度）对约束表达式进行变形，求解变形后的表达式并生成新的测试用例，不断迭代上面的过程，直到完成遍历程序的所有执行路径。  
 《图灵完备》：In computability theory, a system of data-manipulation rules (such as a computer's instruction set, a programming language, or a cellular automaton) is said to be Turing complete or computationally universal if it can be used to simulate any Turing machine. λ验算是图灵完备的。图灵不完备的诸如正则语言、下推自动机、context-free grammars。最小的图灵完备语言如one instruction set computer (OISC)，或称（ultimate reduced instruction set computer，URISC），如：Subtract and branch if negative，Subtract and branch if less than or equal to zero。    
-
+  
+关于软件（安全）测试的  
+【Flaky Test】，就是指在被测对象和测试条件都不变的情况下，有时候失败、有时候成功的测试。因此，Flaky Test实际上就是不稳定的测试，或者随机失败(随机成功)的测试。也可称之为Unreliable Test或者Random-failure Test。  
+【回归测试】  
+【差分测试】  
+  
+  
 #### 简答  
 1.信息系统通常由哪些部分组成？  
 >答：信息系统通常由以下几部分组成：设备及环境、网络和通信设施、系统及应用软件、数据、信息系统的管理体系和对信息系统进行管理和使用的人员。  
