add metamorphic testing

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -70,6 +70,7 @@
 【Flaky Test】，就是指在被测对象和测试条件都不变的情况下，有时候失败、有时候成功的测试。因此，Flaky Test实际上就是不稳定的测试，或者随机失败(随机成功)的测试。也可称之为Unreliable Test或者Random-failure Test。  
 【回归测试】  
 【差分测试】  
+【metamorphic testing蜕变测试】  
   
   
 #### 简答  
