Update网络与信息安全样题.md

--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -452,7 +452,49 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 >A windows操作系统    B Linux操作系统    C CPU     D C语言  
 
 42.【19海大考研题】量子通信协议中，设想对逐个粒子发送进行密钥配置，由于测不准原理，当窃听者试图观测传输的粒子时，其状态就有可能发生改变。所以在理想的量子通信中不存在（）。  
->A 主动攻击    B 被动攻击    C 拒绝服务攻击    D 连通性攻击
+>A 主动攻击    B 被动攻击    C 拒绝服务攻击    D 连通性攻击  
+
+43.【栈溢出选择题】我们在一台Win32操作系统的电脑上使用Visual C++ 6.0的默认编译选项build了以下程序的debug版本，请问以下选项中的哪一个字符串作为密码最有可能能够通过程序的验证？(该电脑采用的存储方式是大端还是小端未知) （  ）
+>A. 1234   B.qqqqqqqq   C.01234567   D.1234??7  
+
+程序如下：
+```
+#include <stdio.h>
+#define PASSWORD "1234567"
+int verify_password(char *password) {
+	int authenticated;
+	char buffer[8];			//add local buff to be overflowed
+	authenticated = strcmp(password, PASSWORD);
+	strcpy(buffer, password);		//overflow here!
+	return authenticated;
+}
+
+void main() {
+	int flag = 0;
+	char password[1024];
+	while(1) {
+		printf("please input password:  ");
+		scanf("%s", password);
+		flag = verify_password(password);
+		if(flag) {
+			printf("incorrect password!\n\n");
+		} else {
+			printf("Congratulation! You have passed the verification!\n\n");
+			break;
+		}
+	}
+}
+/*
+The function strcmp() compares str1 and str2, then returns:
+
+Return value	               Explanation
+less than 0，usually -1	       ''str1'' is less than ''str2''
+equal to 0	               ''str1'' is equal to ''str2''
+greater than 0，usually 1      ''str1'' is greater than ''str2''
+*/
+```
+
+
 
 
 
