--- a/网络与信息安全样题.md
+++ b/网络与信息安全样题.md
@@ -418,10 +418,10 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 32.下列哪个工具可对目标进行端口检测？B  
 >A. sqlmap  B.nmap  C.wireshark  D.Github  
 
-33.实验一中，利用wireshark提取出来的数据，在某一个TCP流中显示cat flag命令的结果为：ZmxhZ3tyZXZlcnNlX3NoZWwxbDFsbGwxbH0KCg==，请问该编码方式是？D  
+33.实验中，利用wireshark提取出来的数据，在某一个TCP流中显示cat flag命令的结果为：ZmxhZ3tyZXZlcnNlX3NoZWwxbDFsbGwxbH0KCg==，请问该编码方式是？D  
 >A. Unicode B.Hash C. Sha1 D.Base64  
 
-34.在实验三中，我们利用了以下哪个工具对程序进行逆向分析？C  
+34.在实验中，我们利用了以下哪个工具对程序进行逆向分析？C  
 >A.Nmap  B.AWVS  C.Ida  D.Burp Suite  
 
 35.非确定性图灵机在多项式时间可解的问题（也是确定性图灵机多项式时间可验证的问题）称之为：（ B   ）。  
@@ -454,7 +454,10 @@ D p->fd = &\_\_malloc_hook, p->bk = &one_gadget
 42.【19海大考研题】量子通信协议中，设想对逐个粒子发送进行密钥配置，由于测不准原理，当窃听者试图观测传输的粒子时，其状态就有可能发生改变。所以在理想的量子通信中不存在（）。  
 >A 主动攻击    B 被动攻击    C 拒绝服务攻击    D 连通性攻击  
 
-43.【栈溢出选择题】我们在一台Win32操作系统的电脑上使用Visual C++ 6.0的默认编译选项build了以下程序的debug版本，请问以下选项中的哪一个字符串作为密码最有可能能够通过程序的验证？(该电脑采用的存储方式是大端还是小端未知) （  ）
+43.【20海大考研题】按惯例，Linux系统中用户账户和组的相关信息保存在/etc/( ）和/etc/group文件。  
+>A passwd    B account    C accounts    D user  
+
+44.【栈溢出选择题】我们在一台Win32操作系统的电脑上使用Visual C++ 6.0的默认编译选项build了以下程序的debug版本，请问以下选项中的哪一个字符串作为密码最有可能能够通过程序的验证？(该电脑采用的存储方式是大端还是小端未知) （  ）
 >A. 1234   B.qqqqqqqq   C.01234567   D.1234??7  
 
 程序如下：
